Styles/mainPageStyle.css
.navbar{
    background-color: black !important;
}

.navbar-brand{
    font-size: 30px;
    font-weight: bold;
    letter-spacing: 2px;
    text-shadow: 3px 5px 15px #78C7D2;
}

.navbar-brand:hover {
    color: #78C7D2 !important;
}

.container-fluid{
    padding: 0;
}

img {
   height: 100vh;
   width: 100%;
}


/*@media (min-width: 586px){
.home{
    background: url('../Media/mainPageBackground.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    height:100vh;;
    width: auto;
}
}

.home{
    background-color: black;
    height:100vh;
}*/

.nav-item a span {
    font-size: 15px !important;
    color: #78C7D2;
}

.nav-item a span:hover {
    text-shadow: 7px 7px 8px white;
}

